# spam-statistics

./: Cargo.toml  LICENSE  README.md
src/: email.rs  main.rs  plot.rs  rspamd.rs  spam.rs  statistics.rs
src/plot/: boxplot.rs  hist.rs  line.rs  pie.rs
