[package]
name = "spam-statistics"
version = "0.1.0"
edition = "2021"
description = "Gather statistics about spam on systems that use Rspamd"
homepage = "https://github.com/AmateurECE/spam-statistics"

[dependencies]
anyhow = { version = "1.0.98", default-features = false }
chrono = { version = "0.4.41", default-features = false }
clap = { version = "4.5.38", features = ["std", "derive"], default-features = false }
email = { version = "0.0.21", default-features = false }
lettre = { version = "0.11.16", features = [ "builder", "smtp-transport" ], default-features = false }
mime = { version = "0.3.17", default-features = false }
regex = { version = "1.11.1", default-features = false }
thiserror = { version = "2.0.12", default-features = false }
